# HomeWork27_1

./: conftest.py  db.sqlite3  factories.py  manage.py  pyproject.toml  pytest.ini
HomeWork27_1/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_author_alter_ad_category_and_more.py  0002_initial.py  0003_alter_ad_author_alter_ad_category_and_more.py  0004_selection.py
ads/tests/: test_ads.py  test_selection.py
ads/urls/: ad_urls.py  cat_urls.py  selection_urls.py
avito/: settings.py  urls.py
data/: ads.json  categories.json  csv_to_json.py  users.json
datasets/: data_json.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng_and_more.py  0003_alter_location_lat_alter_location_lng_and_more.py  0004_alter_user_first_name_alter_user_last_name_and_more.py  0005_user_age.py  0006_alter_user_managers_user_date_joined_user_email_and_more.py  0007_user_birth_date_alter_user_email_and_more.py
