[tool.poetry]
name = "homework27-1"
version = "0.1.0"
description = ""
authors = ["rgazizulin174 <rgazizulin174@gmail.com>"]
readme = "README.md"
packages = [{include = "homework27_1"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2-binary = "^2.9.4"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
